--- a/partials/home.less
+++ b/partials/home.less
@@ -1,36 +1,11 @@
 #Home {
-	position: absolute;
-	top:auto;
-	bottom:0;
-	// max-width: 450px;
-a {
-	font-size: 20px;
-	color: white;
-	text-decoration:none;
-	// color:#90bd2f;
-	.active & {
-			color: #fff;
-			text-shadow: 1px 0px @lime_green;
-			font-weight: bold;
-		}
-}
-	ul{
-		margin-bottom: 50px;
-		li {
-			list-style: none;
-			a {
-				text-align: left;
-				padding:5px;
-				display:block;
-				&:hover {
-					font-weight: bolder;
-					text-decoration:none;
-				}
-			}
-		}
-	}
-	#playlist,
-	audio{
-		width:500px;
-	}
+ 	position: absolute;
+	top: 150px;
+	bottom:auto;
+	width:500px;
+	// background-color: rgba(32,32,32,.55);
+	// border-radius: 10%;
+	// -webkit-box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
+	// -moz-box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
+	// box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
 }
