--- a/css/app.less
+++ b/css/app.less
@@ -1,5 +1,6 @@
 @import "../partials/home.less";
 @import "../directive/nav-bar/nav-bar.less";
+@import "../directive/playlist/playlist.less";
 
 @light_blue: #0992cc;
 @lime_green: #B1FFB1;
@@ -7,33 +8,87 @@
 // @lime_green: #10A710;
 
 body {
+	.gradient();
 	min-height: 1000px;
-	background: -webkit-radial-gradient(red, @dark_gray, black); /* Safari 5.1 to 6.0 */
+	// background: rgba(32,32,32,.25);
+	min-width: 300px;
+	// background: -webkit-radial-gradient(white, white, white, white, @dark_gray); /* Safari 5.1 to 6.0 */
 	// background: -o-radial-gradient(@dark_gray, @lime_green, @light_blue); /* For Opera 11.6 to 12.0 */
 	// background: -moz-radial-gradient(@dark_gray, @lime_green, @light_blue); /* For Firefox 3.6 to 15 */
 	// background: radial-gradient(@dark_gray, @lime_green, @light_blue); /* 
 	// background-color: #333;
+	
 	// background-image: -webkit-linear-gradient(left, lighten(@light_blue, 20%), #41414d, lighten(@dark_gray, 20%));
 }
 
 
+@media (max-width: 979px) {
 
+  /* Remove any padding from the body */
+  body {
+    padding-top: 0;
+  }
+}
 
+[ui-view] & {
+	opacity: 0.9;
 
+	
+}
+[ui-view].ng-enter, [ui-view].ng-leave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  -webkit-transition:all .5s ease-in-out;
+	-moz-transition:all .5s ease-in-out;
+	-o-transition:all .5s ease-in-out;
+	transition:all .5s ease-in-out;
+}
 
+[ui-view].ng-enter {
+  opacity: 0;
+  -webkit-transform:scale3d(0.5, 0.5, 0.5);
+  -moz-transform:scale3d(0.5, 0.5, 0.5);
+  transform:scale3d(0.5, 0.5, 0.5);
+}
 
+[ui-view].ng-enter-active {
+  opacity: 1;
+  -webkit-transform:scale3d(1, 1, 1);
+  -moz-transform:scale3d(1, 1, 1);
+  transform:scale3d(1, 1, 1);
+}
+
+[ui-view].ng-leave {
+  opacity: 1;
+  /*padding-left: 0px;*/  
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+[ui-view].ng-leave-active {
+  opacity: 0;
+  /*padding-left: 100px;*/
+  -webkit-transform:translate3d(100px, 0, 0);
+  -moz-transform:translate3d(100px, 0, 0);
+  transform:translate3d(100px, 0, 0);
+}
+
+.gradient {
+	.gradient();
+}
 // *****************************************
 // Mixins
 // *****************************************
 
 	/* Background Gradient for Monochromatic Colors */
 .gradient() {
-	color: white;
-	border-radius: 100%;
-	opacity: 0.3;
+	// border-radius: 4px;
+	// opacity: 0.3;
     background-color: @dark_gray;
     /* For WebKit (Safari, Chrome, etc) */
-    background: @dark_gray -webkit-gradient(linear, left top, left bottom, from(@light_blue), to(@dark_gray)) no-repeat;
+    background: @dark_gray -webkit-gradient(linear, left top, left bottom, from(white), to(@dark_gray)) no-repeat;
     /* Mozilla,Firefox/Gecko */
     background: @dark_gray -moz-linear-gradient(top, @light_blue, @dark_gray) no-repeat;
     /* IE 5.5 - 7 */
