--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,12 @@
 <div id="Home">
-	<img style="max-width:100px; max-height:100px;" bg-image class="fullBg" ng-repeat="slide in slides"
-    ng-if="isCurrentSlideIndex($index)"
-    ng-src="{{slide.src}}">
 	
+	<footer class="footer">
+		<a class="footer-links" href="">Audio Mastering&nbsp;<i class="fa fa-arrows-h"></i></a>
+		<a class="footer-links" href="">Audio Engineering&nbsp;<i class="fa fa-arrows-h"></i></a>
+		<a class="footer-links" href="">Audio Mixing&nbsp;<i class="fa fa-arrows-h"></i></a>
+		<a class="footer-links" href="">Audio FX&nbsp;<i class="fa fa-arrows-h"></i></a>	
+		<a class="footer-links" href="">Audio Animation&nbsp;<i class="fa fa-arrows-h"></i></a>
+		<img class="footer-wave-image" src="images/hip-hop-2014.png" width="80px" height="30px;"> 
+	</footer>
+
 </div>
