--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -1,49 +1,68 @@
-
-#playlist {
-	opacity: .55;
-	// display:none;
-	.gradient();
-	li {
-		// display: -webkit-inline-box;
-		list-style: none;
-		&.active {
-			color: @light_blue;
-			text-shadow: 1px 0px #999;
-			font-weight: bold;
-		}
-		a {
-			font-size: 20px;
-			// color: @lime_green;
-			text-decoration:none;
-			text-align: center;
-			padding:5px;
-			display:block;
-			// color:#90bd2f;
-			
-			&:hover {
-				font-weight: bolder;
+#table-list {
+	overflow: scroll;
+	height: 400px;	
+	.playlist {
+		min-width: 850px;
+		opacity: 1;
+		li {
+			.pattern();
+			width:70%;
+			line-height: 30px;
+			list-style: none;
+			padding: 10px;
+			&.active {
+				color: red;
+				text-shadow: 1px 0px #999;
+				font-weight: bold;
+			}
+			>.track-caption{
+				vertical-align: text-bottom;
+			}
+			>.track-name {
+				vertical-align: text-bottom;
+				font-size: 20px;
+				color: @light_blue;
 				text-decoration:none;
+				text-align: center;
+				padding:5px;
+				
+				&:hover {
+					opacity:.7;
+					cursor: pointer;
+				}
+			}
+			.fa-music { font-size: 20px; vertical-align: super; }
+			.play-controls {
+				float: right;
+				font-size: 30px;
+				padding-left: 15px;
+				&:hover{
+					color: white;
+					cursor: pointer;
+				}
+			}
+			>.track-img {
+				padding: 10px;
+				// background-image: url(https://i1.sndcdn.com/artworks-000036116262-27sake-t500x500.jpg);
 			}
 		}
-		>.track-img {
-			padding: 10px;
-			// background-image: url(https://i1.sndcdn.com/artworks-000036116262-27sake-t500x500.jpg);
+		.canvas{
+			canvas {
+			    margin: 0;
+			    padding: 0;
+			    position: absolute;
+			    width:100%;
+			    height: 50px;
+			}
 		}
 	}
-	.canvas{
-		canvas {
-		    margin: 0;
-		    padding: 0;
-		    position: absolute;
-		    width:100%;
-		    height: 50px;
-		}
+
+	audio{
+		// background-color: red;
+		width:70%;
+		height:100%;
+		padding:50px;
 	}
-}
-#playlist,
-audio{
-	// background-color: red;
-	width:100%;
-	height:100%;
-	padding:50px;
-}
+
+	}
+
