--- a/partials/audio.html
+++ b/partials/audio.html
@@ -1,1 +1,32 @@
-<playlist></playlist>
+<div id="Audio" class="pattern">
+	<playlist></playlist>
+	
+    <button style="background-color:#ff3e00;width:100%;" 
+        data-ng-click="should_display = !should_display" 
+        class="btn btn-default">SoundCloud
+    </button>
+
+    <div data-ng-if="should_display === true">
+        <iframe width="100%" 
+            height="150" 
+            scrolling="no" 
+            frameborder="no" 
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/148558617&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+        </iframe>
+
+        <iframe width="100%" 
+            height="150" 
+            scrolling="no" 
+            frameborder="no" 
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/113326521&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+        </iframe>
+
+        <iframe width="100%" 
+            height="150" 
+            scrolling="no" 
+            frameborder="no" 
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/110627228&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+        </iframe>
+    </div>
+
+</div>
