--- a/partials/social.html
+++ b/partials/social.html
@@ -1,1 +1,13 @@
-social.html
+<br>
+<button style="background-color:#3A5795;width:100%;" 
+        data-ng-click="should_display = !should_display" 
+        class="btn btn-default">FaceBook
+</button>
+<button style="background-color:#125688;width:100%;" 
+        data-ng-click="should_display = !should_display" 
+        class="btn btn-default">Instagram
+</button>
+<button style="background-color:#59ADEB;width:100%;" 
+        data-ng-click="should_display = !should_display" 
+        class="btn btn-default">Twitter
+</button>
