--- a/partials/about.html
+++ b/partials/about.html
@@ -1,1 +1,6 @@
-about.html
+<div id="About" class="pattern">
+	<div class="about-headers">
+		<h3>About me?</h3>
+		<h1>Outro</h1>
+	</div>
+</div>	
