--- a/partials/home.html
+++ b/partials/home.html
@@ -1,12 +1,5 @@
 <div id="Home">
-	
-	<footer class="footer">
-		<a class="footer-links" href="">Audio Mastering&nbsp;<i class="fa fa-arrows-h"></i></a>
-		<a class="footer-links" href="">Audio Engineering&nbsp;<i class="fa fa-arrows-h"></i></a>
-		<a class="footer-links" href="">Audio Mixing&nbsp;<i class="fa fa-arrows-h"></i></a>
-		<a class="footer-links" href="">Audio FX&nbsp;<i class="fa fa-arrows-h"></i></a>	
-		<a class="footer-links" href="">Audio Animation&nbsp;<i class="fa fa-arrows-h"></i></a>
-		<img class="footer-wave-image" src="images/hip-hop-2014.png" width="80px" height="30px;"> 
-	</footer>
-
+	<div data-text-slide></div>
+	<!-- FOOTER -->
+	<div data-home-footer></div>
 </div>
