--- a/css/app.less
+++ b/css/app.less
@@ -1,8 +1,13 @@
+@import "../partials/about.less";
 @import "../partials/audio.less";
 @import "../partials/home.less";
 @import "../modals/purchase-modal.less";
+@import "../directive/footer/home-footer.less";
+// @import "../directive/artist-api.less";
+@import "../directive/instagram.less";
 @import "../directive/nav-bar/nav-bar.less";
 @import "../directive/playlist/playlist.less";
+@import "../directive/slides/text-slide.less";
 
 @light_blue: #0992cc;
 @lime_green: #B1FFB1;
@@ -12,26 +17,31 @@ html {
 }
 body {
     background-color: rgba(223,224,225,1)!important;
+    // .pattern();
 }
-
+ul {
+  list-style: none;
+}
 @media (max-width: 939px) {
   body {
     padding-top: 0;
   }
-  img { display: none; }
 }
 
 canvas#grapher {
-  position: absolute;
-  top: 60px;
-  max-height: 30px;
+  // position: absolute;
+  // top: auto;
+  bottom: 0%;
+  max-height: 630px;
   width: 100%;
+  z-index:-1;
+  opacity:.35;
 }
 
 [ui-view] & {
 	opacity: 0.9;
 
-	
+
 }
 [ui-view].ng-enter, [ui-view].ng-leave {
   position: absolute;
@@ -59,7 +69,7 @@ canvas#grapher {
 
 [ui-view].ng-leave {
   opacity: 1;
-  /*padding-left: 0px;*/  
+  /*padding-left: 0px;*/
   -webkit-transform:translate3d(0, 0, 0);
   -moz-transform:translate3d(0, 0, 0);
   transform:translate3d(0, 0, 0);
@@ -97,7 +107,7 @@ canvas#grapher {
         url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
         rgb(17, 17, 17);
     background: -moz-radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat, 
+        rgba(17, 17, 17,0) 40%) no-repeat,
         url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
         rgb(17, 17, 17);
     background: -ms-radial-gradient(rgba(100, 100, 100,0.5),
@@ -113,3 +123,25 @@ canvas#grapher {
     url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
     rgb(17, 17, 17);
 }
+.slider() {
+    &.ng-enter,
+    &.ng-leave {
+        -webkit-transition:  900ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -moz-transition:  900ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -ms-transition:  900ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -o-transition:  900ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        transition: 900ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+      }
+
+    &.ng-enter {
+        opacity: 0;
+        left: 100%;
+    }
+    &.ng-enter.ng-enter-active {
+        left: 0;
+    }
+    &.ng-leave {
+        left: 0;
+    }
+}
+.slide { .slider(); }
