--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -1,25 +1,54 @@
-.nav {
+@media screen and (min-width: 768px) {
+    nav.navbar-nav {
+        float: inherit;
+        margin: 0 0 50px 0;
+        text-align: center;
+        display: -webkit-inline-box;
+    }
+}
+@media screen and (max-width: 300px) {
+    #table-list { width: 100vw; }
+}
+nav.navbar {
     position: relative;
-    left: 5%;
     right: auto;
     bottom: auto;
     top: 0;
+    background:none;
+    border:none;
+    z-index:9;
+    >div.navbar-header {
+        text-align: -webkit-center;
+        >.navbar-toggle {
+            position: relative;
+            float: inherit;
+            padding: 9px 10px;
+            margin-top: 8px;
+            margin-right: 15px;
+            margin-bottom: 8px;
+            background-color: transparent;
+            background-image: none;
+            border: 1px solid transparent;
+            border-radius: 4px;
+        }
+    }
 }
 div.navbar-collapse.collapse {
     	display: block;
     	overflow: hidden;
     	max-height: 0px;
-    	-webkit-transition: max-height .3s ease;
-    	-moz-transition: max-height .3s ease;
-    	-o-transition: max-height .3s ease;
-    	transition: max-height .3s ease;
+    	-webkit-transition: max-height .15s ease-in-out;
+    	-moz-transition: max-height .15s ease-in-out;
+    	-o-transition: max-height .15s ease-in-out;
+    	transition: max-height .15s ease-in-out;
+        >.nav > li {
+            position: relative;
+            display: -webkit-inline-box;
+        }
 
     }
 div.navbar-collapse.collapse.in {
-    max-height: 200px;
-
-    }
-.navbar-default .navbar-nav > li.active {
-    // display: none;
-    background: #00ff00 url("images/hip-hop-2014.png") no-repeat fixed center; 
+    max-height: 100vh;
+    background-color: rgba(32,32,32,.85);
+    margin: 19px 0 auto -23px;
 }
