Added grunt server to the node libs. UPdated libraries. Cleaned up. Updated bower packages.

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,4 +1,32 @@
 <div id="Contact" class="pattern">
 <h1>Contact</h1>
-<video src="website-demo.mov" autoplay></video>
-</div>	
+
+
+<div id="table-list">
+        <div id="mp3_player">
+            <div id="audio_box"></div>
+            <canvas class="canvas" id="analyser_render"></canvas>
+        </div>
+    <div class="table-list">
+        <ul class="playlist" data-ng-repeat="track in tracks">
+            <li data-ng-class="{ 'active' : is_clicked } " data-ng-click="is_clicked = !is_clicked">
+                <i class="fa fa-music"></i>
+                <a class="track-name"
+                    data-ng-click="onPlayClicked($index)">{{track.name}}
+                </a>
+                <i class="play-controls fa fa-pause"
+                    data-ng-click="onPauseClicked($index)">
+                </i>
+                <i class="play-controls fa
+                        fa-play-circle-o"
+                    data-ng-click="onPlayClicked($index)">
+                </i>
+                <i class="play-controls fa fa-cart-plus"></i>
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+
+</div>
