--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -1,15 +1,31 @@
 @media screen and (max-width: 300px) {
-	#table-list { width: 100vw; }    
+	#table-list { width: 100vw; }
 }
 #table-list {
 	height: 100vh;
     width: 100vw;
+    opacity:.5;
+    &:not(:hover) {
+	    background: none;
+
+    }
+    &:hover {
+    	opacity: 1;
+    	-webkit-box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
+		// -moz-box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
+		// box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
+    }
+    > .hide-btn {
+    	width: 100vw;
+    	background: none !important;
+    	border: none !important;
+    }
 }
 .table-list {
 	position: absolute;
-	top: 115px;
+	top: 185px;
 	overflow: scroll;
-    max-height: 100vh;
+    min-height: 90vh;
 	>.playlist {
 		min-width: 850px;
 		opacity: 1;
@@ -36,7 +52,7 @@
 				text-decoration:none;
 				text-align: center;
 				padding:5px;
-				
+
 				&:hover {
 					opacity:.7;
 					cursor: pointer;
@@ -68,15 +84,15 @@
 	}
 }
 
-div#mp3_player{ 
-	width:100%; 
+div#mp3_player{
+	width:100%;
 	position: absolute;
 }
-div#mp3_player > div > audio { 
+div#mp3_player > div > audio {
 	width:100vw;
     -webkit-filter: drop-shadow(0 0 2em blue);
 }
-div#mp3_player > canvas { 
+div#mp3_player > canvas {
     width: 100%;
     height: 100vh;
     position: fixed;
