Updated the Grunt file to use localhost:9002 and ignore jslint errors.

--- a/partials/social.html
+++ b/partials/social.html
@@ -33,6 +33,12 @@
         target="_blank"
         class="btn btn-default">SoundClick
     </a>
+    <!-- Splice.com -->
+    <a style="background-color:#fafafa;width:100%;"
+        href="http://www.splice.com/DrVamp"
+        target="_blank"
+        class="btn btn-default">Splice.com
+    </a>
 
     <a style="background-color:#1DD65F;width:100%;"
         href="http://www.soundclick.com/DrVamp"
