Updated file names and cleaned up partials and directives.

--- a/directive/footer/home-footer.less
+++ b/directive/footer/home-footer.less
@@ -2,9 +2,8 @@ footer {
 	height: 100px;
 	width:100%;
 	position: absolute;
-	bottom: auto;
-	top: 350px;
-	// background-color: rgba(66,66,66,.55);
+	bottom: 10%;
+	top: auto;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.65+0,0+100;Neutral+Density */
 	background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 100%, rgba(0,0,0,0) 0%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(100%,rgba(0,0,0,0.65)), color-stop(0%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
@@ -29,6 +28,6 @@ footer {
 	.footer-wave-image {
 		position: absolute;
 		left: 0;
-	}	
-	
+	}
+
 }
