Added service for Fetching artist data.

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div id="Home">
-	<div data-content></div>
+	<div data-artist-content></div>
 	<!-- FOOTER -->
 	<div data-home-footer></div>
 </div>
