Refatored and added new files for artist API. Changed styles... etc...

--- a/directive/footer/home-footer.less
+++ b/directive/footer/home-footer.less
@@ -1,18 +1,10 @@
 footer {
 	height: 100px;
-	width:100%;
+	width: 100vw;
 	position: absolute;
-	bottom: 10%;
+	bottom: 0;
 	top: auto;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.65+0,0+100;Neutral+Density */
-	background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 100%, rgba(0,0,0,0) 0%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(100%,rgba(0,0,0,0.65)), color-stop(0%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0.65) 100%,rgba(0,0,0,0) 0%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-
+	.overlayBackground();
 	>.footer-links {
 		position: relative;
 		top: 40%;
