--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,4 @@
 <div id="Home">
-	<div data-artist-content></div>
-	<!-- FOOTER -->
-	<div data-home-footer></div>
+    <div data-ui-view></div>
+    <data-side-bar></data-side-bar>
 </div>
