--- a/partials/home.less
+++ b/partials/home.less
@@ -1,8 +1,7 @@
 #Home {
 	.pattern();
-	height:100vh;
-	// border-radius: 10%;
-	// -webkit-box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
-	// -moz-box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
-	// box-shadow: inset 10px 10px 108px 0px rgba(0,0,0,0.75);
+    position: relative;
+	height:95vh;
 }
+
+
