--- a/css/app.less
+++ b/css/app.less
@@ -1,32 +1,55 @@
+@import "../partials/artist/artist.less";
 @import "../partials/about.less";
 @import "../partials/audio.less";
 @import "../partials/home.less";
+
 @import "../modals/purchase-modal.less";
+@import "../modals/gear.less";
+
+@import "../directive/artist-lookup/artist-lookup.less";
+@import "../directive/artist-content/artist-content.less";
 @import "../directive/footer/home-footer.less";
-// @import "../directive/artist-api.less";
 @import "../directive/instagram.less";
 @import "../directive/nav-bar/nav-bar.less";
 @import "../directive/playlist/playlist.less";
-@import "../directive/content/content.less";
+@import "../directive/side-bar/side-bar.less";
 
 @light_blue: #0992cc;
-@lime_green: #B1FFB1;
+@lime_green: #00FF40;
 @dark_gray: #202020;
+
+@side_width: 20vw;
 html {
     max-height: 720px;
 }
+
 body {
-    background-color: rgba(223,224,225,1)!important;
+    background-color: #000!important;
 }
 ul {
   list-style: none;
+}
+hr {
+  -webkit-box-shadow: 0px -2px 10px 1px @light_blue!important;
+  -moz-box-shadow: 0px -2px 10px 1px @light_blue!important;
+  box-shadow: 0px -2px 10px 1px @light_blue!important;
+  border-top: none!important;
 }
 @media (max-width: 939px) {
   body {
     padding-top: 0;
   }
 }
-
+button {
+	background: none;
+  outline: none !important;
+  // &:hover, &:focus, &:active, &:hover, &:link, &:visited {  }
+}
+.text {
+  font-size: 24px;
+  color: #fff;
+  &.span { font-size: 18px; color: #ccc; }
+}
 canvas#grapher {
   bottom: 0%;
   max-height: 630px;
@@ -40,33 +63,33 @@ canvas#grapher {
 
 
 }
+
 [ui-view].ng-enter, [ui-view].ng-leave {
   position: absolute;
   left: 0;
   right: 0;
-  -webkit-transition:all .5s ease-in-out;
-	-moz-transition:all .5s ease-in-out;
-	-o-transition:all .5s ease-in-out;
-	transition:all .5s ease-in-out;
+  -webkit-transition:all .7s ease-in-out;
+	-moz-transition:all .7s ease-in-out;
+	-o-transition:all .7s ease-in-out;
+	transition:all .7s ease-in-out;
 }
 
 [ui-view].ng-enter {
   opacity: 0;
-  -webkit-transform:scale3d(0.5, 0.5, 0.5);
-  -moz-transform:scale3d(0.5, 0.5, 0.5);
-  transform:scale3d(0.5, 0.5, 0.5);
+  -webkit-transform: scale3d(0.8, 0.8, 0.8);
+  -moz-transform: scale3d(0.8, 0.8, 0.8);
+  transform: scale3d(0.8, 0.8, 0.8);
 }
 
 [ui-view].ng-enter-active {
   opacity: 1;
-  -webkit-transform:scale3d(1, 1, 1);
-  -moz-transform:scale3d(1, 1, 1);
-  transform:scale3d(1, 1, 1);
+  -webkit-transform: scale3d(1, 1, 1);
+  -moz-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
 }
 
 [ui-view].ng-leave {
   opacity: 1;
-  /*padding-left: 0px;*/
   -webkit-transform:translate3d(0, 0, 0);
   -moz-transform:translate3d(0, 0, 0);
   transform:translate3d(0, 0, 0);
@@ -74,10 +97,9 @@ canvas#grapher {
 
 [ui-view].ng-leave-active {
   opacity: 0;
-  /*padding-left: 100px;*/
-  -webkit-transform:translate3d(100px, 0, 0);
-  -moz-transform:translate3d(100px, 0, 0);
-  transform:translate3d(100px, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .gradient {
@@ -90,35 +112,41 @@ canvas#grapher {
 // Mixins
 // *****************************************
 .pattern(){
-    background-image: -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.25)), -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.25));background-image: -webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25)), -webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25));background-position: 0 0pt, 2px 2px;background-size: 4px 4px;background-color: #202125;background-image: -webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25)), -webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25));background-position: 0 0pt, 2px 2px;background-size: 4px 4px;background-color: #202125;height:50px;
+    background-image: -moz-linear-gradient(
+	    	45deg, rgba(0, 0, 0, 0.25) 25%,
+	    	transparent 25%, transparent 75%,
+	    	rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.25)
+		),
+	    -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.25) 25%,
+	    	transparent 25%, transparent 75%,
+	    	rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.25)
+		);
+
+    background-image: -webkit-linear-gradient(
+	    	45deg, rgba(0, 0, 0, .25) 25%,
+	    	transparent 25%, transparent 75%,
+	    	rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25)
+    	),
+	    -webkit-linear-gradient(
+	    	45deg, rgba(0, 0, 0, .25) 25%,
+	    	transparent 25%, transparent 75%,
+	    	rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25)
+    	);
+    background-color: #202125;
+    background-image: -webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%,
+    	transparent 25%, transparent 75%,
+    	rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25)),
+    	-webkit-linear-gradient(45deg, rgba(0, 0, 0, .25) 25%,
+    	transparent 25%, transparent 75%,
+    	rgba(0, 0, 0, .25) 75%, rgba(0, 0, 0, .25));
+    background-position: 0 0pt, 2px 2px;
+    background-size: 2px 2px;
+    // Background size is the Pixel Background.
 }
-	/* Background Gradient for Monochromatic Colors */
+/* Background Gradient for Monochromatic Colors */
 .gradient() {
-    background: rgb(17, 17, 17);
-    background: -webkit-gradient(radial, center center, 0, center center, 40%,
-        from(rgba(100, 100, 100,0.5)), to(rgba(17, 17, 17,0))) no-repeat
-        url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-        rgb(17, 17, 17);
-    background: -webkit-radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat,
-        url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-        rgb(17, 17, 17);
-    background: -moz-radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat,
-        url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-        rgb(17, 17, 17);
-    background: -ms-radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat,
-        url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-        rgb(17, 17, 17);
-    background: -o-radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat,
-        url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-        rgb(17, 17, 17);
-    background: radial-gradient(rgba(100, 100, 100,0.5),
-        rgba(17, 17, 17,0) 40%) no-repeat,
-    url(http://iviewsource.com/exercises/audioslider/images/backgroundpattern.png),
-    rgb(17, 17, 17);
+    // background: rgb(17, 17, 17);
+
 }
 .slider() {
     &.ng-enter,
@@ -141,7 +169,34 @@ canvas#grapher {
         left: 0;
     }
 }
+.overlay(@top: 0, @right: 0, @bottom: 0, @left: 0) {
+    position: absolute;
+    top: @top;
+    right: @right;
+    bottom: @bottom;
+    left: @left;
+}
+.overlayBackground() {
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.65+0,0+100;Neutral+Density */
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 100%, rgba(0,0,0,0) 0%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(100%,rgba(0,0,0,0.65)), color-stop(0%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0.65) 100%,rgba(0,0,0,0) 0%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+}
 .slide { .slider(); }
 
-.ngtweet-wrapper iframe { width: 100vw; }
+
+.ngtweet-wrapper iframe {
+}
+body > .timeline { background: none !important; }
+.root.timeline.ltr.customisable-border {
+  width: 100vw!important;
+  background: none;
+  border: none;
+  color: red;
+}
 
