--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -1,13 +1,24 @@
 @media screen and (min-width: 768px) {
     nav.navbar-nav {
         float: inherit;
-        margin: 0 0 50px 0;
         text-align: center;
         display: -webkit-inline-box;
     }
 }
 @media screen and (max-width: 300px) {
     #table-list { width: 100vw; }
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
+    background: #1e61e6 !important;
+    -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+    -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+    box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+    color: #fff !important;
+    font-weight: 900;
+
+}
+.navbar-default .navbar-nav > li > a:hover {
+    color: #fff !important;
 }
 nav.navbar {
     position: relative;
@@ -17,6 +28,7 @@ nav.navbar {
     background:none;
     border:none;
     z-index:9;
+
     >div.navbar-header {
         text-align: -webkit-center;
         >.navbar-toggle {
@@ -33,6 +45,7 @@ nav.navbar {
         }
     }
 }
+
 div.navbar-collapse.collapse {
     	display: block;
     	overflow: hidden;
@@ -50,5 +63,4 @@ div.navbar-collapse.collapse {
 div.navbar-collapse.collapse.in {
     max-height: 100vh;
     background-color: rgba(32,32,32,.85);
-    margin: 19px 0 auto -23px;
 }
