--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -4,21 +4,23 @@
 #table-list {
 	height: 100vh;
     width: 100vw;
-    opacity:.5;
     &:not(:hover) {
 	    background: none;
 
     }
     &:hover {
-    	opacity: 1;
-    	-webkit-box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
-		// -moz-box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
-		// box-shadow: inset 4px 10px 119px 0px rgba(0,0,0,0.75);
+    	-webkit-box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
+		-moz-box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
+		box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
     }
+
     > .hide-btn {
     	width: 100vw;
-    	background: none !important;
-    	border: none !important;
+        border-right: none;
+        border-left: none;
+    	border-top: none;
+        color: @light_blue;
+        outline: none;
     }
 }
 .table-list {
@@ -94,11 +96,7 @@ div#mp3_player > div > audio {
 }
 div#mp3_player > canvas {
     width: 100%;
-    height: 100vh;
-    position: fixed;
-    // top: 13%;
-    left: 0;
-    // transform: rotate(180deg);
+    height: 60px;
     opacity: .85;
     z-index: -1;
 }
