Added ng-sanitize for html parsing from son data. Changed styles for the uiview transition and other. Updated the personal portfolio son.

--- a/directive/artist-content/artist-content.less
+++ b/directive/artist-content/artist-content.less
@@ -1,6 +1,10 @@
 #ArtistContent {
     height: 75vh;
+    margin-top: 50px;
     overflow: scroll;
+    > .text-input {
+        .overlay(@top:68px);
+    }
     > .list-container {
         width: 200px;
         display: inline-block;
