--- a/directive/footer/home-footer.less
+++ b/directive/footer/home-footer.less
@@ -1,7 +1,7 @@
 footer {
 	height: 100px;
 	width: 100vw;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	top: auto;
 	.overlayBackground();
