--- a/css/app.less
+++ b/css/app.less
@@ -59,9 +59,8 @@ canvas#grapher {
 }
 
 [ui-view] & {
-	opacity: 0.9;
-
-
+    opacity: 1;
+    margin-top: 100px;
 }
 
 [ui-view].ng-enter, [ui-view].ng-leave {
@@ -76,9 +75,9 @@ canvas#grapher {
 
 [ui-view].ng-enter {
   opacity: 0;
-  -webkit-transform: scale3d(0.8, 0.8, 0.8);
-  -moz-transform: scale3d(0.8, 0.8, 0.8);
-  transform: scale3d(0.8, 0.8, 0.8);
+  -webkit-transform: scale3d(0.1, 0.1, 0.1);
+  -moz-transform: scale3d(0.1, 0.1, 0.1);
+  transform: scale3d(0.1, 0.1, 0.1);
 }
 
 [ui-view].ng-enter-active {
@@ -97,9 +96,9 @@ canvas#grapher {
 
 [ui-view].ng-leave-active {
   opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0.5, 0.5, 0.5);
+  -moz-transform: translate3d(0.5, 0.5, 0.5);
+  transform: translate3d(0.5, 0.5, 0.5);
 }
 
 .gradient {
@@ -189,6 +188,30 @@ canvas#grapher {
 }
 .slide { .slider(); }
 
+.shakeEffect() {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+
+    @keyframes shake {
+        10%, 90% {
+            transform: translate3d(-1px, 0, 0);
+        }
+
+        20%, 80% {
+            transform: translate3d(2px, 0, 0);
+        }
+
+        30%, 50%, 70% {
+            transform: translate3d(-4px, 0, 0);
+        }
+
+        40%, 60% {
+            transform: translate3d(4px, 0, 0);
+        }
+    }
+}
 
 .ngtweet-wrapper iframe {
 }
