--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -21,7 +21,7 @@
     color: #fff !important;
 }
 nav.navbar {
-    position: relative;
+    position: fixed;
     right: auto;
     bottom: auto;
     top: 0;
