--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -2,7 +2,7 @@
 	#table-list { width: 100vw; }
 }
 #table-list {
-	height: 100vh;
+	height: 80vh;
     width: 100vw;
     &:not(:hover) {
 	    background: none;
@@ -24,10 +24,9 @@
     }
 }
 .table-list {
-	position: absolute;
-	top: 185px;
-	overflow: scroll;
-    min-height: 90vh;
+	.overlay(@top:185px);
+    min-height: 20vh;
+    max-height: 60vh;
 	>.playlist {
 		min-width: 850px;
 		opacity: 1;
@@ -118,20 +117,20 @@ div#mp3_player > canvas {
 
     @-webkit-keyframes myfirst {
 	    0%,
-	    10%   { background: rgba(75,0,130, .3); }
-	    15%   { background: rgba(123,104,238, .8); }
-	    20%   { background: rgba(0,85,211, .8); }
-	    25%   { background: rgba(220,0,60, .9); }
-	    30%   { background: rgba(165,42,0, .8); }
-	    35%   { background: rgba(123,104,238, .8); }
-	    40%   { background: rgba(160,82,45, .6); }
-	    45%   { background: rgba(123,104,238, .8); }
-	    50%   { background: rgba(128,128,0, .4); }
-	    55%   { background: rgba(123,104,238, .8); }
-	    60%   { background: rgba(0,100,0, .2); }
-	    65%   { background: rgba(0,128,0, .3); }
-	    70%   { background: rgba(34,139,34, .4); }
-	    80%  { background: rgba(0,85,211, .8); }
-	    100%  { background: rgba(123,104,238, .5); }
+	    10%   { background: rgba(75,0,130, .1); }
+	    15%   { background: rgba(123,104,238, .1); }
+	    20%   { background: rgba(0,85,211, .1); }
+	    25%   { background: rgba(220,0,60, .1); }
+	    30%   { background: rgba(165,42,0, .1); }
+	    35%   { background: rgba(123,104,238, .1); }
+	    40%   { background: rgba(160,82,45, .1); }
+	    45%   { background: rgba(123,104,238, .1); }
+	    50%   { background: rgba(128,128,0, .1); }
+	    55%   { background: rgba(123,104,238, .1); }
+	    60%   { background: rgba(0,100,0, .1); }
+	    65%   { background: rgba(0,128,0, .1); }
+	    70%   { background: rgba(34,139,34, .1); }
+	    80%  { background: rgba(0,85,211, .1); }
+	    100%  { background: rgba(123,104,238, .1); }
     }
 
