--- a/modals/gear.less
+++ b/modals/gear.less
@@ -31,12 +31,38 @@
     background: -webkit-linear-gradient(top, #fff 0%, rgba(32,32,32, .6) 45%, #000 100%);
     color: #fff;
     border-top: 3px inset @lime_green;
+    > .fa-times-circle {
+        font-size: 45px;
+        color: @dark_gray;
+        margin: 15px;
+        float: right;
+        cursor: pointer;
+        opacity: .5;
+        &:hover {
+            .shakeEffect();
+            opacity: 1;
+            font-size: 55px;
+        }
+    }
     > .image {
         max-width: 50%;
         max-height: 30%;
         display: -webkit-box;
         display: -moz-box;
         display: box;
+    }
+    > .text-container {
+        text-shadow: -2px -1px 2px @light_blue;
+        white-space: normal;
+        font-family: "Arial Black", Gadget, sans-serif;
+        font-size: 16px;
+        >.text {
+            > .dynamic-text {
+                text-transform: uppercase;
+                text-shadow: -2px -1px 2px orange;
+
+            }
+        }
     }
 }
 @media (min-width: 768px){
