--- a/directive/artist-content/artist-content.less
+++ b/directive/artist-content/artist-content.less
@@ -1,9 +1,10 @@
 #ArtistContent {
     height: 75vh;
-    margin-top: 50px;
+    margin-top: 56px;
     overflow: scroll;
     > .text-input {
-        .overlay(@top:68px);
+        .overlay(@top:103px);
+        position: fixed;
     }
     > .list-container {
         width: 200px;
