--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -1,66 +1,67 @@
-@media screen and (min-width: 768px) {
-    nav.navbar-nav {
-        float: inherit;
-        text-align: center;
-        display: -webkit-inline-box;
-    }
-}
-@media screen and (max-width: 300px) {
-    #table-list { width: 100vw; }
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
-    background: #1e61e6 !important;
-    -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-    -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-    box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-    color: #fff !important;
-    font-weight: 900;
-
-}
-.navbar-default .navbar-nav > li > a:hover {
-    color: #fff !important;
-}
-nav.navbar {
-    position: fixed;
-    right: auto;
-    bottom: auto;
-    top: 0;
-    background:none;
-    border:none;
-    z-index:9;
-
-    >div.navbar-header {
-        text-align: -webkit-center;
-        >.navbar-toggle {
-            position: relative;
+#NavBar {
+    .box(center);
+    @media screen and (min-width: 768px) {
+        nav.navbar-nav {
             float: inherit;
-            padding: 9px 10px;
-            margin-top: 8px;
-            margin-right: 15px;
-            margin-bottom: 8px;
-            background-color: transparent;
-            background-image: none;
-            border: 1px solid transparent;
-            border-radius: 4px;
-        }
-    }
-}
-
-div.navbar-collapse.collapse {
-    	display: block;
-    	overflow: hidden;
-    	max-height: 0px;
-    	-webkit-transition: max-height .15s ease-in-out;
-    	-moz-transition: max-height .15s ease-in-out;
-    	-o-transition: max-height .15s ease-in-out;
-    	transition: max-height .15s ease-in-out;
-        >.nav > li {
-            position: relative;
+            text-align: center;
             display: -webkit-inline-box;
         }
+    }
+    @media screen and (max-width: 300px) {
+        #table-list { width: 100vw; }
+    }
+    .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
+        background: #1e61e6 !important;
+        -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+        -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+        box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+        color: #fff !important;
+        font-weight: 900;
 
     }
-div.navbar-collapse.collapse.in {
-    max-height: 100vh;
-    background-color: rgba(32,32,32,.85);
+    .navbar-default .navbar-nav > li > a:hover {
+        color: #fff !important;
+    }
+    nav.navbar {
+        height: 30px;
+        background:none;
+        border:none;
+        z-index:9;
+
+        >div.navbar-header {
+            text-align: -webkit-center;
+            >.navbar-toggle {
+                position: relative;
+                float: inherit;
+                padding: 9px 10px;
+                margin-top: 8px;
+                margin-right: 15px;
+                margin-bottom: 8px;
+                background-color: transparent;
+                background-image: none;
+                border: 1px solid transparent;
+                border-radius: 4px;
+            }
+        }
+    }
+
+    div.navbar-collapse.collapse {
+        	display: block;
+        	overflow: hidden;
+        	max-height: 0px;
+        	-webkit-transition: max-height .15s ease-in-out;
+        	-moz-transition: max-height .15s ease-in-out;
+        	-o-transition: max-height .15s ease-in-out;
+        	transition: max-height .15s ease-in-out;
+            >.nav > li {
+                position: relative;
+                display: -webkit-inline-box;
+            }
+
+        }
+    div.navbar-collapse.collapse.in {
+        max-height: 100vh;
+        background-color: rgba(32,32,32,.85);
+    }
+
 }
