--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,4 @@
 <div id="Home">
     <div data-ui-view></div>
-    <data-side-bar></data-side-bar>
+    <data-vertical-menu></data-vertical-menu>
 </div>
