Made the Nav Bar visible by hotkeys switch.

--- a/modals/gear.less
+++ b/modals/gear.less
@@ -44,8 +44,9 @@
             font-size: 55px;
         }
     }
+    .text > img,
     > .image {
-        max-width: 50%;
+        max-width: 30%;
         max-height: 30%;
         display: -webkit-box;
         display: -moz-box;
@@ -55,11 +56,12 @@
         text-shadow: -2px -1px 2px @light_blue;
         white-space: normal;
         font-family: "Arial Black", Gadget, sans-serif;
-        font-size: 16px;
+
         >.text {
+            font-size: 14px;
             > .dynamic-text {
                 text-transform: uppercase;
-                text-shadow: -2px -1px 2px orange;
+                text-shadow: -2px -1px 2px #000;
 
             }
         }
