--- a/partials/about.html
+++ b/partials/about.html
@@ -1,6 +1,14 @@
 <div id="About" class="pattern">
-	<div class="about-headers">
-		<h3>About me?</h3>
-		<h1>Outro</h1>
+    <div class="about-headers">
+    	<h1>About</h1>
+        <h3 class="name" data-ng-bind-html="model.content.name"></h3>
+        <h5 class="name" data-ng-bind-html="model.content.artist_name"></h5>
+        <span class="age" data-ng-bind-html="model.content.age"></span>
+        <span class="ethnicity" data-ng-bind-html="model.content.ethnicity"></span>
+        <span class="location" data-ng-bind-html="model.content.location"></span>
+        <div class="image"
+            data-ng-bind-html="model.content.image">
+        </div>
+        <p class="description" data-ng-bind-html="model.content.about.join('')"></p>
 	</div>
-</div>	
+</div>
