--- a/partials/about.less
+++ b/partials/about.less
@@ -1,6 +1,28 @@
 #About{
 	height:100vh;
-	>.about-headers{
-		text-align: center;
-	}
+	text-align: center;
+    @padding: 55px;
+    >.about-headers{
+        height: 100vh;
+        margin-top: @padding;
+        text-align: left;
+        padding-left: @padding;
+        >.name {
+            font-weight: 900;
+            color: #fff;
+        }
+        >.ethnicity,
+        >.location,
+        >.age {
+            font-weight: 700;
+            color: #ccc;
+        }
+        >.image {
+            margin-top: @padding;
+        }
+        >.description {
+            margin-top: @padding;
+            color: @light_blue;
+        }
+    }
 }
