--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,5 @@
 <div id="Home">
     <div data-ui-view></div>
     <data-vertical-menu></data-vertical-menu>
+    <div data-home-footer></div>
 </div>
