Improved additional styles and removed the class "pattern".

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,4 +1,4 @@
-<div id="About" class="pattern">
+<div id="About">
     <div class="about-headers">
     	<h1>About</h1>
         <h3 class="name" data-ng-bind-html="model.content.name"></h3>
