--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -1,8 +1,7 @@
 .vertical-menu {
-    width: 100vw;
+    width: 20vw;
     height: 100%;
     .transition(@prop: width, @time: 5s);
-    &.side-menu { width: 20vw; }
     .overlay(@top: auto; @left:auto;);
     .overlayBackground();
     > .search-engine-btn {
@@ -10,7 +9,7 @@
             background: rgba(32,32,32,.7);
         }
         &.direction-btn {
-            .overlay(@top:auto; @bottom: 150px;);
+            // .overlay(@top:auto; @bottom: 150px;);
         }
         &:nth-child(odd){
             text-shadow: -2px -1px 2px @lime_green;
@@ -24,7 +23,7 @@
         }
         width: 100%;
         background: none;
-        font-size: 24px;
+        font-size: 18px;
         white-space: normal;
 
         font-family: "Arial Black", Gadget, sans-serif;
