--- a/partials/about.less
+++ b/partials/about.less
@@ -1,12 +1,12 @@
 #About{
 	height:100vh;
 	text-align: center;
-    @padding: 55px;
+
     >.about-headers{
         height: 100vh;
-        margin-top: @padding;
+        margin-top: @standard_padding;
         text-align: left;
-        padding-left: @padding;
+        padding-left: @standard_padding;
         >.name {
             font-weight: 900;
             color: #fff;
@@ -18,10 +18,10 @@
             color: #ccc;
         }
         >.image {
-            margin-top: @padding;
+            margin-top: @standard_padding;
         }
         >.description {
-            margin-top: @padding;
+            margin-top: @standard_padding;
             color: @light_blue;
         }
     }
