--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,4 +1,8 @@
 <div id="Contact">
-<h1>Contact</h1>
-
+    <h1>Contact</h1>
+    <div class="contact-content">
+        <h5 data-ng-bind-html="model.content.contact.info"></h5>
+        <h3 data-ng-bind-html="model.content.name"></h3>
+        <h5 data-ng-bind-html="model.content.contact.email"></h5>
+    </div>
 </div>
