--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,7 @@
 <div id="Home">
     <div data-ui-view></div>
     <data-vertical-menu></data-vertical-menu>
-    <div data-home-footer></div>
+    <div data-soundcloud-new-track data-ng-if="!model.is_mobile"></div>
+    <div data-twitter-feed data-ng-if="!model.is_mobile"></div>
+    <div data-home-footer data-ng-if="!model.is_mobile"></div>
 </div>
