--- a/partials/social.html
+++ b/partials/social.html
@@ -69,10 +69,7 @@
         </iframe>
     </div>
     <div id="container" data-ng-if="should_display_tweet === true">
-         <twitter-widget>
-    <a class="twitter-timeline" href="https://twitter.com/DktrVamp" data-widget-id="693361144551968770">Tweets by @DktrVamp</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</twitter-widget>
+        <div data-twitter-feed></div>
     </div>
 
 </div>
