--- a/partials/home.html
+++ b/partials/home.html
@@ -4,4 +4,9 @@
     <div data-soundcloud-new-track data-ng-if="!model.is_mobile"></div>
     <div data-twitter-feed data-ng-if="!model.is_mobile"></div>
     <div data-home-footer data-ng-if="!model.is_mobile"></div>
+    <a href="#" class="rs-link"
+        data-ng-if="model.is_mobile"
+        data-ng-click="model.is_mobile = !model.is_mobile"
+        data-link-desktop="Switch to desktop version" data-link-responsive="Switch to responsive / mobile version">
+    </a>
 </div>
