--- a/css/app.less
+++ b/css/app.less
@@ -3,6 +3,7 @@
 @import "../partials/audio.less";
 @import "../partials/contact.less";
 @import "../partials/home.less";
+@import "../partials/policy.less";
 
 @import "../modals/purchase-modal.less";
 @import "../modals/gear.less";
@@ -20,7 +21,8 @@
 @light_blue: #0992cc;
 @lime_green: #00FF40;
 @dark_gray: #202020;
-
+@blue: #1e61e6;
+@red: #e60000;
 
 @standard_padding: 55px;
 
@@ -32,13 +34,13 @@ body {
     background-color: #000!important;
 }
 ul {
-  list-style: none;
+    list-style: none;
 }
 hr {
-  -webkit-box-shadow: 0px -2px 10px 1px @light_blue!important;
-  -moz-box-shadow: 0px -2px 10px 1px @light_blue!important;
-  box-shadow: 0px -2px 10px 1px @light_blue!important;
-  border-top: none!important;
+    -webkit-box-shadow: 0px -2px 10px 1px @light_blue!important;
+    -moz-box-shadow: 0px -2px 10px 1px @light_blue!important;
+    box-shadow: 0px -2px 10px 1px @light_blue!important;
+    border-top: none!important;
 }
 @media (max-width: 939px) {
   body {
@@ -46,21 +48,66 @@ hr {
   }
 }
 button {
-	background: none;
-  outline: none !important;
+    pointer-events: auto;
+    cursor: pointer;
+    &.submit-button {
+        width: 100%;
+        min-height: 50px;
+        background: @blue;
+        color: white;
+        font-weight: 900;
+        font-size: 21px;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #444;
+        -moz-box-shadow:    inset 0 0 40px #444;
+        -webkit-box-shadow: inset 0 0 40px #444;
+        box-shadow:         inset 0 0 40px #444;
+        &:hover {
+            color: @lime_green;
+        }
+        &[disabled] {
+            .invalid();
+            opacity: .7;
+            pointer-events: none;
+            background: none;
+        }
+    }
+
+    background: none;
+    outline: none !important;
   // &:hover, &:focus, &:active, &:hover, &:link, &:visited {  }
 }
+label,
+textarea,
+input {
+    &.ng-empty,
+    &.ng-invalid {
+        .invalid();
+    }
+    &.ng-valid {
+        .valid();
+    }
+}
+
+label {
+    &:hover { cursor: pointer; }
+    font-size: 18px;
+    font-weight: 900;
+    color: #fff;
+    &.invalid { color: @red; }
+}
 .text {
-  font-size: 24px;
-  color: #fff;
-  &.span { font-size: 18px; color: #ccc; }
+    font-size: 24px;
+    color: #fff;
+    &.span { font-size: 18px; color: #ccc; }
 }
 canvas#grapher {
-  bottom: 0%;
-  max-height: 630px;
-  width: 100%;
-  z-index:-1;
-  opacity:.35;
+    bottom: 0%;
+    max-height: 630px;
+    width: 100%;
+    z-index:-1;
+    opacity:.35;
 }
 .transition(@prop: all, @time: .7s) {
     -webkit-transition: @prop @time ease-in-out;
@@ -75,17 +122,15 @@ canvas#grapher {
     &.ng-leave { opacity: 1; }
     &.ng-leave-active { opacity: 0; }
 }
-[ui-view] {
-    min-height: 350px;
-    overflow: auto;
-    .fadeAnimation();
-}
 
 .gradient {
 	.gradient();
 }
 .pattern {
     .pattern();
+}
+.shaddow {
+    text-shadow: 1px 1px #444;
 }
 // *****************************************
 // Mixins
@@ -210,12 +255,15 @@ canvas#grapher {
     }
 }
 
-.ngtweet-wrapper iframe {}
-body > .timeline { background: none !important; }
-.root.timeline.ltr.customisable-border {
-  width: 100vw!important;
-  background: none;
-  border: none;
-  color: red;
+.invalid() {
+    -moz-box-shadow:    inset 1px 1px 15px @red;
+    -webkit-box-shadow: inset 1px 1px 15px @red;
+    box-shadow:         inset 1px 1px 15px @red;
+    border-color: @red;
 }
-
+.valid() {
+    -moz-box-shadow:    inset 1px 1px 15px @lime_green;
+    -webkit-box-shadow: inset 1px 1px 15px @lime_green;
+    box-shadow:         inset 1px 1px 15px @lime_green;
+    border-color: @lime_green;
+}
