--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -11,7 +11,7 @@
         #table-list { width: 100vw; }
     }
     .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
-        background: #1e61e6 !important;
+        background: @blue !important;
         -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
         -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
         box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
