--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -2,7 +2,7 @@
     width: 20vw;
     height: 100%;
     .transition(@prop: width, @time: 5s);
-    .overlay(@top: auto; @left:auto;);
+    .overlay(@top: 65px; @left:auto;);
     .overlayBackground();
     > .search-engine-btn {
         &:hover {
