--- a/partials/engineering.html
+++ b/partials/engineering.html
@@ -1,1 +1,4 @@
-<h1>This Page is not Yet Available</h1>
+<div id="Engineering">
+    <h1>This Page is not Yet Available</h1>
+    <data-vertical-menu></data-vertical-menu>
+</div>
