--- a/partials/home.html
+++ b/partials/home.html
@@ -1,12 +1,11 @@
 <div id="Home">
     <div data-ui-view></div>
-    <data-vertical-menu></data-vertical-menu>
-    <div data-soundcloud-new-track data-ng-if="!model.is_mobile"></div>
-    <div data-twitter-feed data-ng-if="!model.is_mobile"></div>
-    <div data-home-footer data-ng-if="!model.is_mobile"></div>
-    <a href="#" class="rs-link"
+    <div data-soundcloud-new-track></div>
+    <div data-twitter-feed></div>
+    <!-- <button class="submit-button rs-link"
         data-ng-if="model.is_mobile"
         data-ng-click="model.is_mobile = !model.is_mobile"
-        data-link-desktop="Switch to desktop version" data-link-responsive="Switch to responsive / mobile version">
-    </a>
+        data-link-desktop="Switch to desktop version">
+        Switch to desktop version
+    </button> -->
 </div>
